--- a/index.html
+++ b/index.html
@@ -27,8 +27,18 @@
       <input type="button" value="5" class="cinco">
     </form>
 
-    <button type="submit">SUBMIT</button>
+    <button type="submit" class="submit">SUBMIT</button>
   </main>
+  <div class="submit">
+      <img src="assets/images/illustration-thank-you.svg" alt="Thank You Illustration">
+
+      <p>You selected 4 out of 5</p>
+
+      <div class="submit-textzone">
+        <h1>Thank you!</h1>
+        <p>We appreciate you taking the time to give a rating. If ou ever need more support, don't hesitate to get in touch!</p>
+      </div>
+  </div>
 
   <script src="assets/js/scripts.js"></script>
 </body>
