botando uma mensagem de erro ao clicar em submit sem dar nota (usei metodos arcaicos pq ainda não sei mexer direito com erros e validação no js)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <button type="submit" class="submit">SUBMIT</button>
   </main>
 
+  <span class="mensagem">Choose one of the options before submitting!</span>
+
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
