--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
     <article>
       <h1>How did we do?</h1>
-      <p>Please let us know we did with our support request. All feedback is appreciated to help us improve our offering!</p>
+      <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
     </article>
   
     <form action="get">
